--- a/PetShop/PetShop.Blazor/Server/PetShop.Blazor.Server.csproj
+++ b/PetShop/PetShop.Blazor/Server/PetShop.Blazor.Server.csproj
@@ -8,9 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\PetShop.EF\PetShop.EF.csproj" />
+    <ProjectReference Include="..\..\PetShop.Model\PetShop.Model.csproj" />
     <ProjectReference Include="..\Client\PetShop.Blazor.Client.csproj" />
     <ProjectReference Include="..\Shared\PetShop.Blazor.Shared.csproj" />
   </ItemGroup>
